--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx}\" && prettier --write \"./src/**/*.{js,jsx,ts,tsx}\""
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "npm run lint"
+    ]
   },
   "dependencies": {
     "next": "12.0.10",
@@ -17,6 +22,7 @@
     "@types/react": "17.0.39",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "prettier": "^2.5.1",
     "typescript": "4.5.5"
   }
 }
