--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     ]
   },
   "dependencies": {
+    "@types/needle": "^2.5.3",
+    "needle": "^3.0.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
